feat(element): 添加感电反应配置并优化元素系统
- 新增感电反应配置文件，实现雷元素和水元素的交互
- 优化 DynamicElementHandler，增加伤害阈值和概率判断
-调整 ElementAttachmentHandler 接口，增加伤害量参数
- 重构 ElementData 类，使用 final 修饰符确保不可变性- 优化 ElementDecaySystem 和 ElementEnvironmentSystem 的逻辑
- 更新 ElementReactionConfig，增加 DOT（持续伤害）相关配置
-调整 ElementReactionDataLoader 以支持新配置